# hostpilot

./: .gitignore  CHECKLIST.md  LICENSE  PLANNING.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: publish.yml  test-e2e.yml  test-unit.yml
docs/: AQA_MILESTONES.md  DEVELOPMENT.md
public/: splash.html
scripts/: release.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/capabilities-e2e/: playwright.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_proxy.sql  0003_proxy_advanced.sql  0004_dynamic_hosts.sql  0005_profile_groups.sql
src-tauri/queries/: check_group_exists.sql  check_host_exists.sql  delete_all_app_state.sql  delete_all_backups.sql  delete_all_groups.sql  delete_all_hosts.sql  delete_all_ports.sql  delete_all_profile_entries.sql  delete_all_profile_groups.sql  delete_all_profiles.sql  delete_all_proxy_rules.sql  insert_app_state.sql  insert_backup.sql  insert_group.sql  insert_host.sql  insert_port.sql  insert_profile.sql  insert_profile_entry.sql  insert_profile_group.sql  insert_proxy_rule.sql  select_active_proxy_rules_by_domain.sql  select_app_state_notifications.sql  select_app_state_onboarded.sql  select_app_state_settings.sql  select_backups.sql  select_groups.sql  select_hosts.sql  select_ports.sql  select_profile_entries.sql  select_profile_groups.sql  select_profiles.sql  select_proxy_rules.sql
src-tauri/src/: config.rs  db.rs  hosts.rs  lib.rs  main.rs  ports.rs  proxy.rs  ssl.rs
src-tauri/src/db/: load.rs  mod.rs  save.rs
src-tauri/tests/: config_tests.rs  db_tests.rs  hosts_tests.rs
src/components/: ErrorBoundary.tsx
src/components/backups/: BackupCreateDialog.tsx
src/components/dashboard/: DashboardSidebar.tsx  LiveDiffPreview.tsx  RecentPortsList.tsx  StatusCardList.tsx
src/components/groups/: GroupCard.tsx  GroupFormDialog.tsx
src/components/hosts/: HostFormDialog.tsx  (+1 more)
src/data/: demo.ts  initial.ts
src/hooks/: useApplyChanges.ts  useConfirmDialog.ts  useDynamicHostScheduler.ts
src/i18n/: en.ts  th.ts  translations.ts
src/lib/: schemas.ts
src/pages/: BackupsPage.tsx  DashboardPage.tsx  GroupsPage.tsx  HostsPage.tsx  ImportExportPage.tsx  PortsPage.tsx  ProfilesPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
src/store/: AppStore.tsx  apiAdapter.ts  i18nHelper.ts  types.ts
tests/: setup.ts
tests/e2e/: fixtures.ts  global-setup.ts  playwright.config.ts
(+48 files in other folders)
