[package]
name = "hostpilot"
version = "0.1.6"
description = "A desktop app for managing local domain mappings in your system hosts file"
authors = ["chilgoe"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hostpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
similar = "2.4"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sys-locale = "0.3.2"
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hickory-resolver = "0.24"
tokio = { version = "1", features = ["full"] }
regex = "1"
rcgen = { version = "0.13", features = ["x509-parser"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }





